--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     listen [::]:80;
 
-    server_name ussd.bongatech.co.ke;
+    server_name mig.bursary.com;
     server_tokens off;
 
     location /.well-known/acme-challenge/ {
@@ -19,7 +19,7 @@ server {
     listen 443 ssl;
     listen [::]:443 ssl http2;
 
-    server_name ussd.bongatech.co.ke;
+    server_name mig.bursary.com;
 
     root /usr/share/nginx/html;
 
@@ -27,6 +27,6 @@ server {
       try_files $uri $uri/ /index.html =404;
     }
 
-    ssl_certificate /etc/letsencrypt/live/ussd1.bongatech.co.ke/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/ussd1.bongatech.co.ke/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/mig.bursary.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/mig.bursary.com/privkey.pem;
 }
